# RoomRally

./: README.md
RoomRally-Chatbot/: .gitignore  Dockerfile  README.md  pyproject.toml
RoomRally-Chatbot/app/: server.py
RoomRally-Chatbot_v0/: pyproject.toml
RoomRally-Chatbot_v0/app/: server.py
Time_Analysis/: AI_Business_model.py  model.pt
data/: cmu_calendar_events.csv  cmudata.py  coworking_data.ipynb
roomrally/: package-lock.json  package.json
roomrally/src/: App.js
roomrally/src/components/: chatbot.css  chatbot.js  footer.css  footer.js
roomrally/src/pages/: booking.css  booking.js  login.css  login.js  roomList.css  roomList.js  waitlist.css  waitlist.js
