[tool.poetry]
name = "RoomRally-Chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
langchain-anthropic = "^0.1.11"
langchain-openai = "^0.1.3"
langchain = "^0.1.16"
fastapi = "^0.110.2"
langchain-community = "^0.0.34"
langchain-core = "^0.1.45"
langchain-chroma = "^0.1.0"
langchain-text-splitters = "^0.0.1"
langchain-google-vertexai = "^1.0.1"
bs4 = "^0.0.2"
vertexai = "^1.48.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
